welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:48: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime3.FlowerCase'
override def run() {
             ^